# Adult-Glioma-Segmentation

./: .dockerignore  .env.example  .gitignore  Competitive_benchmarking.md  README.md  business_analysis.md  docker-compose.yml  product_prototype.md  pyproject.toml
.dvc/: config
app/: Dockerfile  api_key.py  config.py  main.py  main_colab.py
app/crud/: ml.py
app/database/: database.py  seed.py
app/dicom/: reader.py  writer.py
app/models/: __init__.py  ml_model.py  ml_request_model.py
app/routes/: glioma_router.py  home_router.py
app/schemas/: __init__.py  glioma_schemas.py  ml_task_schemas.py
app/services/: __init__.py  glioma_service.py  mq_consumer.py  mq_publisher.py
app/static/: app.html  viewer.html
app/utils/: __init__.py  exceptions.py
checkpoints/: best_model_swin_unetr_fold0.pth.dvc  best_model_swin_unetr_fold2.pth.dvc  best_model_swin_unetr_fold3.pth.dvc
configs/: base.yaml  swin_der.yaml  swin_unetr.yaml  unet3d.yaml
data/processed/: .gitignore  MSD_BrainTumour.dvc  UPENN-GBM.dvc  metadata.csv.dvc
data/raw/: .gitignore  UPENN-GBM.dvc
docs/: Business_analysis.md  colab_setup.md
experiments/: pyproject.toml
experiments/configs/: base.yaml  swin_der.yaml
experiments/data/processed/: metadata.csv.dvc
experiments/data/raw/: .gitignore
experiments/notebooks/: 01_EDA.ipynb  02_Training.ipynb  03_ModelAnalysis.ipynb
experiments/src/models/: __init__.py  decoder.py  encoder.py  onsampling.py  unet3d_baseline.py
experiments/src/scripts/: analyze_results.py  inference.py  prepare_data.py  train.py
experiments/src/scripts/utils/: analysis.py  config_schema.py  data.py  output.py  validate_dataset.py  visualization.py
ml_worker/: glioma_worker.py
models/: __init__.py  attention.py  dsa_block.py  swin_der.py  swin_der_3D.py  swin_unetr.py
models_registry/v1.0.0/: best_model_swin_unetr_fold1.pth.dvc  best_model_swin_unetr_fold4.pth.dvc  config.yaml
nginx/: nginx.conf
nginx/ssl/: README.md
notebooks/: 01_EDA.ipynb  02_Training.ipynb  03_ModelAnalysis.ipynb  Colab_Glioma_Demo.ipynb
plugin-eclipse/: GliomaSegmentationPlugin.cs
pretrained/: model_swinvit.pt.dvc
scripts/: check_broken_files.py  check_duplicates.py  check_msd_match.py  check_upenn_match.py  collect_label_stats.py  collect_metadata.py  import_msd_to_processed.py  inference.py  prepare_data.py  prepare_upenn_4d.py  select_best_model.py  train.py  verify_processed.py  visualize_uncertainty_cases.py
scripts/utils/: collect_metadata.py  data.py  import_msd_to_processed.py  metrics.py  model.py  output.py  prepare_upenn_4d.py  transforms.py  tta.py  visualization.py
src/: __init__.py
src/glioma/: __init__.py  __main__.py  cli.py  inference.py  model.py  output.py  report.py  settings.py  visualization.py
src/models/: __init__.py  swin_unetr.py
src/utils/: array.py  tta.py
tests/: conftest.py  test_glioma_api_smoke.py
