[project]
name = "AdultGliomaSegmentation"
version = "0.1.0"
description = "Service for automated 3D segmentation of adult-type diffuse gliomas"
requires-python = ">=3.12"
dependencies = [
    "clearml>=2.1.7",
    "dvc[s3]>=3.0.0",
    "einops>=0.7.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.4.0",
    "monai>=1.3.2",
    "nibabel>=5.0.0",
    "nilearn>=0.13.1",
    "numpy>=1.24.0,<2",
    "pandas>=1.5.0",
    "scikit-learn>=1.0.0",
    "seaborn>=0.13.2",
    "simpleitk>=2.3.0",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "tqdm>=4.66.0",
    "mmcv=2.2.0",
    "PyYAML>=6.0.1",
]


[tool.uv.extra-build-dependencies]
mmcv = [
    "setuptools>=70.0.0",
    "wheel",
    "pkg_resources",
    "ninja",
    "numpy<2",
    "torch>=2.4.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "models*"]
