[project]
name = "AdultGliomaSegmentation"
version = "0.1.0"
description = "Service for automated 3D segmentation of adult-type diffuse gliomas"
requires-python = ">=3.12, <3.13"
dependencies = [
    "clearml>=2.1.7",
    "dvc[s3]>=3.0.0",
    "einops>=0.7.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.4.0",
    "monai>=1.4.0",
    "nibabel>=5.0.0",
    "nilearn>=0.13.1",
    "numpy>=1.24.0,<2",
    "pandas>=1.5.0",
    "scikit-learn>=1.0.0",
    "scikit-image>=0.22.0",
    "seaborn>=0.13.2",
    "simpleitk>=2.3.0",
    "torchinfo>=1.8.0",
    "torch>=2.2.0; sys_platform == 'darwin'",
    "torch>=2.4.0; sys_platform == 'linux'",
    "torchvision>=0.17.0; sys_platform == 'darwin'",
    "torchvision>=0.19.0; sys_platform == 'linux'",
    "tvdcn",
    "tqdm>=4.66.0",
    "PyYAML>=6.0.1",
]

[tool.uv]
environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    #"sys_platform == 'linux' and platform_machine == 'x86_64'"
]

[project.optional-dependencies]
gpu = [
    "tvdcn",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "models*"]
