[project]
name = "glioma-experiments"
version = "0.1.0"
description = "Research and training utilities for adult glioma segmentation"
requires-python = ">=3.9"
dependencies = [
    # Core ML (same as production root)
    "torch>=2.2.0; sys_platform == 'darwin'",
    "torch>=2.4.0; sys_platform == 'linux'",
    "torchvision>=0.17.0; sys_platform == 'darwin'",
    "torchvision>=0.19.0; sys_platform == 'linux'",
    "monai>=1.4.0",
    "nibabel>=5.0.0",
    "numpy>=1.24.0,<2",
    "pandas>=1.5.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "einops>=0.7.0",
    "simpleitk>=2.3.0",
    "tqdm>=4.66.0",
    "PyYAML>=6.0.1",
    # Research-specific
    "clearml>=2.1.7",
    "dvc[s3]>=3.0.0",
    "jupyter>=1.1.1",
    "nilearn>=0.10.0",
    "scikit-image>=0.22.0",
    "seaborn>=0.13.2",
    "torchinfo>=1.8.0",
]

[project.optional-dependencies]
gpu = [
    "tvdcn",
]

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]

[tool.uv.sources]
tvdcn = { git = "https://github.com/inspiros/tvdcn.git", rev = "v0.4.0" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
